<resources>
    <string name="app_name">Twitch Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_search">Search for Channels</string>
    <string name="title_activity_channel">Channel Information</string>
    <string name="submit_button">OK</string>
    <string name="search_field">Enter username</string>
    <string name="add_user_button">Add</string>
    <string name="status_title">Status:</string>
    <string name="game_title">Game:</string>
    <string name="user_not_found_message">User not found.</string>
    <string name="on_twitch_since_title">Joined:</string>
    <string name="views_title">Views:</string>
    <string name="followers_title">Followers:</string>
    <string name="language_title">Language:</string>
    <string name="url_title">Channel link:</string>
    <string name="remove_user_button">Remove</string>
    <string name="back_button">Back</string>
</resources>
