<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffebebeb"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.root.myapplication.ChannelActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/c_imageViewUserLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center"
                android:paddingRight="@dimen/table_row_margin" />
        </LinearLayout>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_marginTop="@dimen/grid_margin"
            android:layout_marginBottom="@dimen/grid_margin">

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/c_textViewStatusTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/grid_margin"
                    android:layout_row="0"
                    android:text="@string/status_title" />

                <TextView
                    android:id="@+id/c_textStreamStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/grid_margin"
                    android:layout_row="0"
                    android:paddingRight="50dp" />

                <TextView
                    android:id="@+id/c_textGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/grid_margin"
                    android:layout_row="1"
                    android:text="@string/game_title" />

                <TextView
                    android:id="@+id/c_textViewGameValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/grid_margin"
                    android:layout_row="1" />

                <TextView
                    android:id="@+id/c_textViewOnTwitchSinceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/grid_margin"
                    android:layout_row="2"
                    android:text="@string/on_twitch_since_title" />

                <TextView
                    android:id="@+id/c_textViewOnTwitchSinceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/grid_margin"
                    android:layout_row="2" />

                <TextView
                    android:id="@+id/c_textViewViews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/grid_margin"
                    android:layout_row="3"
                    android:text="@string/views_title"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/s_textViewViewsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/grid_margin"
                    android:layout_row="3" />

                <TextView
                    android:id="@+id/c_textViewFollowersTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/grid_margin"
                    android:layout_row="4"
                    android:text="@string/followers_title" />

                <TextView
                    android:id="@+id/c_textViewFollowersValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/grid_margin"
                    android:layout_row="4" />

                <TextView
                    android:id="@+id/c_textViewLanguageTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/grid_margin"
                    android:layout_row="5"
                    android:text="@string/language_title" />

                <TextView
                    android:id="@+id/c_textViewLanguageValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/grid_margin"
                    android:layout_row="5" />

                <TextView
                    android:id="@+id/c_textViewUrlTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/grid_margin"
                    android:layout_row="6"
                    android:text="@string/url_title" />

                <TextView
                    android:id="@+id/c_textViewUrlValue"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/grid_margin"
                    android:layout_row="6"
                    android:maxLines="2"
                    android:layout_rowSpan="2"
                    android:singleLine="false"
                    android:height="20dip"
                    android:layout_width="wrap_content" />
            </GridLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="9"
                android:gravity="bottom|left"
                android:orientation="vertical">

                <Button
                    android:id="@+id/c_buttonBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|left"
                    android:text="@string/back_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="9"
                android:gravity="bottom|right"
                android:orientation="vertical">

                <Button
                    android:id="@+id/c_buttonRemove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:text="@string/remove_user_button"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
